--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bunyan": "^1.3.4",
     "lodash": "^3.5.0",
     "mongodb": "~2.0",
     "restify": "^3.0.0"
